; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfilenbionbio_stdio.c_nbio_stdio_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfilenbionbio_stdio.c_nbio_stdio_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nbio_stdio_t = type { i64, %struct.nbio_stdio_t*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @nbio_stdio_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nbio_stdio_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.nbio_stdio_t*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.nbio_stdio_t*
  store %struct.nbio_stdio_t* %5, %struct.nbio_stdio_t** %3, align 8
  %6 = load %struct.nbio_stdio_t*, %struct.nbio_stdio_t** %3, align 8
  %7 = icmp ne %struct.nbio_stdio_t* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %31

9:                                                ; preds = %1
  %10 = load %struct.nbio_stdio_t*, %struct.nbio_stdio_t** %3, align 8
  %11 = getelementptr inbounds %struct.nbio_stdio_t, %struct.nbio_stdio_t* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp sge i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = call i32 (...) @abort() #3
  unreachable

16:                                               ; preds = %9
  %17 = load %struct.nbio_stdio_t*, %struct.nbio_stdio_t** %3, align 8
  %18 = getelementptr inbounds %struct.nbio_stdio_t, %struct.nbio_stdio_t* %17, i32 0, i32 2
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @fclose(i32* %19)
  %21 = load %struct.nbio_stdio_t*, %struct.nbio_stdio_t** %3, align 8
  %22 = getelementptr inbounds %struct.nbio_stdio_t, %struct.nbio_stdio_t* %21, i32 0, i32 1
  %23 = load %struct.nbio_stdio_t*, %struct.nbio_stdio_t** %22, align 8
  %24 = call i32 @free(%struct.nbio_stdio_t* %23)
  %25 = load %struct.nbio_stdio_t*, %struct.nbio_stdio_t** %3, align 8
  %26 = getelementptr inbounds %struct.nbio_stdio_t, %struct.nbio_stdio_t* %25, i32 0, i32 2
  store i32* null, i32** %26, align 8
  %27 = load %struct.nbio_stdio_t*, %struct.nbio_stdio_t** %3, align 8
  %28 = getelementptr inbounds %struct.nbio_stdio_t, %struct.nbio_stdio_t* %27, i32 0, i32 1
  store %struct.nbio_stdio_t* null, %struct.nbio_stdio_t** %28, align 8
  %29 = load %struct.nbio_stdio_t*, %struct.nbio_stdio_t** %3, align 8
  %30 = call i32 @free(%struct.nbio_stdio_t* %29)
  br label %31

31:                                               ; preds = %16, %8
  ret void
}

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #1

declare dso_local i32 @fclose(i32*) #2

declare dso_local i32 @free(%struct.nbio_stdio_t*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
